--- a/tools/ui/package.json
+++ b/tools/ui/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fuse.js": "^6.6.2",
+    "leaflet": "^1.8.0",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.0.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.11",
     "@types/node": "^18.0.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
